# dmpc-pusht

./: .gitignore  PAPER.md  README.md  pyproject.toml
configs/: stage1_1b_pretrain.yaml  stage1_1b_reward.yaml  stage1_phase1_sigreg.yaml  stage1_pusht.yaml  stage1_pusht_M.yaml  stage1_pusht_scale.yaml  stage1ab_pretrain.yaml  stage1ab_reward.yaml  stage1af_reward.yaml  stage1ag_reward.yaml  stage1ah_reward.yaml  stage1b_reward.yaml  stage1b_reward_M.yaml  stage1r_multi.yaml  stage1t_combined.yaml  stage1t_reward.yaml  stage1u_combined.yaml  stage1u_reward.yaml  stage1v_combined.yaml  stage1v_reward.yaml  stage1vp_combined.yaml  stage1vp_reward.yaml  stage1w_combined.yaml  stage1w_reward.yaml  stage1x_combined.yaml  stage1x_reward.yaml  stage1z_reward.yaml  toy_v2.yaml  toy_v3.yaml
scripts/: build_discriminator_buffer.py  collect_dmpc_rollouts.py  collect_self_play.py  eval_adaptive.py  eval_bc_seed102.py  eval_diffusion_policy.py  eval_dmpc.py  eval_seed102_strategies.py  extract_goal_frame.py  extract_lerobot_goal.py  finetune_dp_her.py  latent_probe_eval.py  oracle_ensemble_report.py  prepare_her_buffer.py  render_seed102.py  run_AF_sweep.sh  run_bc_anchor_sweep.sh  run_bid_sweep.sh  run_goalweight_sweep.sh  run_holdout_ensemble.sh  run_n500_shards.sh  run_phase1_eval.sh  run_pixel_ground_sweep.sh  run_random_perturb_failures.sh  run_selfgad_sweep.sh  run_stage_1B_chain.sh  run_stage_AB_chain.sh  run_stage_AF_chain.sh  run_stage_AG_chain.sh  run_stage_AH_chain.sh  run_stage_AI_chain.sh  run_stage_M_chain.sh  run_stage_M_from10k.sh  run_stage_T_chain.sh  (+19 more)
(+24 files in other folders)
