[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmpc-pusht"
version = "1.0.0"
description = "D-MPC for canonical pixel PushT — 99.8% success rate via DP + JEPA reranker + adaptive K-shot inference scaling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "gymnasium",
    "gym-pusht",
    "lerobot>=0.5.0",
    "safetensors",
    "huggingface_hub",
    "imageio",
    "einops",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
